--- a/main.html
+++ b/main.html
@@ -107,7 +107,7 @@ Youtube貼り付けここまで -->
         <section>
           <div class="section">
             <div class="container">
-              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>黒板に書かれている謎を解け！</h2>
+              <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：2</span>エリアを行き来できる扉のロックを解除しよう！</h2>
               <p class="text-center">次のエリアに入ることができた！<br>
                 ここでプレイヤーは少しずつ世界が消えていっていることを今いるエリアに間一髪で逃げてきたアバターが言っていたエリアを行き来できる扉全てにロックがかかっている。<br>
                 これらを解くことで、きっと次のステップに繋がるはずだ！</p>
@@ -198,7 +198,7 @@ Youtube貼り付けここまで -->
         <!-- STAGE3-1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>家庭科室の課題とは</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：3</span>避難用シェルターのロックを解除せよ!</h2>
             <p class="text-center">
               避難用シェルターの扉にロックがかかっていて開かない。
               このままでは全員世界と共に消えてしまう！！
