--- a/main.html
+++ b/main.html
@@ -33,7 +33,7 @@
         <!-- STAGE1問題セクション　ここから -->
         <section class="section">
           <div class="container">
-            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>さぁゲームを始めよう！</h2>
+            <h2 class="section-title section-title--keycolorlight"><span class="section-title__stage">STAGE：1</span>PCのロックを解除せよ!</h2>
             <p class="text-center">自分の作ったアバターと遊んでいたら突然！画面の動作がおかしくなってしまう。
               すると”パスコードを入力してください”という画面から数字キー以外、ボタンもマウスも反応しなくなってしまう。<br>
               下の画像の謎を解き、キーワード欄に入力しよう。</p>
